[metadata]
name = mprov_esxiprovisioner
author = Jason Williams
author_email = jasonw@jhu.edu
description = An add-on to the mPCC to enable it to provision ESXi servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mprov-ng/mprov_esxiprovisioner
project_urls =
    Bug Tracker = https://github.com/mprov-ng/mprov_esxiprovisioner/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
include_package_data = True
[options.packages.find]
where = src


[options.package_data]
* = templates/*/*